--- a/store/templates/product.html
+++ b/store/templates/product.html
@@ -1,5 +1,33 @@
 {% extends "base.html" %}
 
 {% block main %}
-    <h1>{{product.name}}</h1>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="mx-auto col-md-8">
+                <div class="card">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="img-fluid" src="{{product.image.url}}" alt="">
+                        </div>
+                            <div class="col-md-4">
+                                <div class="d-flex align-items-center gap-2" style="height: 100%">
+                                    <div class="product_dsc">
+                                        <h4>{{product.name}}</h4>
+                                        <h4>${{product.price}}</h4>
+                                        <button class="btn btn-dark">Add to cart</button><br>
+                                        <span class="text-success">In stock</span>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-md-8 mx-auto">
+                <h5>product description:</h5>
+                <p>{{product.description}}</p>
+            </div>
+        </div>
+    </div>
 {% endblock main %}
